--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title></title>
+    <title>ajay chandravadiya</title>
   </head>
   <body>
     <header>welcome to webfolio - ajayrc </header>
