feat(homepage): add links to vr page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   </head>
   <body>
     <header>welcome to webfolio - ajayrc </header>
-    <section> content goes here </section>
+    <section> this is work in progress... meanwhile enjoy my other creations </section>
+    <nav>
+        <ul>
+          <li> <a href="1-dot-klmvrtest.appspot.com"> Experimenting Side By Side VR/3D with ThreeJs </a> </li>
+    </nav>
+    
   </body>
 </html>
