--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <section> this is work in progress... meanwhile enjoy my other creations </section>
     <nav>
         <ul>
-          <li> <a href="1-dot-klmvrtest.appspot.com"> Experimenting Side By Side VR/3D with ThreeJs </a> (2016) </li>
-          <li> <a href="1-dot-klmimplementationplan.appspot.com\index_aug2014.html"> Release Calendar - Mobile </a> (2015) </li>
-          <li> <a href="westpacjqt.appspot.com"> Experimenting Side By Side VR/3D with ThreeJs </a> (2015) </li>
+          <li> <a href="http://1-dot-klmvrtest.appspot.com"> Experimenting Side By Side VR/3D with ThreeJs </a> (2016) </li>
+          <li> <a href="http://1-dot-klmimplementationplan.appspot.com\index_aug2014.html"> Release Calendar - Mobile </a> (2015) </li>
+          <li> <a href="http://westpacjqt.appspot.com"> Experimenting Side By Side VR/3D with ThreeJs </a> (2015) </li>
           <li> <a href="http://prezi.com/nywg81juy9zd/"> PREZI - VR related interactive presentation </a> (2015) </li>
       </ul>
     </nav>
