--- a/index.html
+++ b/index.html
@@ -10,8 +10,17 @@
           <li> <a href="http://1-dot-klmvrtest.appspot.com"> Experimenting Side By Side VR/3D with ThreeJs </a> (2016) </li>
           <li> <a href="http://westpacjqt.appspot.com"> Experimenting Side By Side VR/3D with ThreeJs </a> (2015) </li>
           <li> <a href="http://prezi.com/nywg81juy9zd/"> PREZI - VR related interactive presentation </a> (2015) </li>
-          <li> <a href="http://1-dot-klmimplementationplan.appspot.com\index_aug2014.html"> Release Calendar - Best seen in a Mobile </a> (2014) </li>
+          <li> <a href="http://1-dot-klmimplementationplan.appspot.com\index_aug2014.html"> Release Calendar - Best seen in a Mobile </a> (2014) </li>          
       </ul>
+
+      <h3>Created proposals/prototypes of following ideas:</h3>
+      <ul>
+        <li>Smart Move – your personal travel guide to deliver door to door service </li>
+        <li>Weekender – a personalized annual holiday calendar for frequent flyers</li>
+        <li>POInt – a Point Of Interest guide to get the best out of a city tour</li> 
+      </ul>
+      
+      <h3> Hackathons: </h3>
     </nav>
     
   </body>
