--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li>Smart Move – your personal travel guide to deliver door to door service </li>
         <li>Weekender – a personalized annual holiday calendar for frequent flyers</li>
         <li>POInt – a Point Of Interest guide to get the best out of a city tour</li> 
+        <img src="./ideas.png">
       </ul>
       
       <h3> Hackathons: </h3>
