--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
 
       <h3>Created proposals/prototypes of following ideas:</h3>
       <ul>
-        <li>Smart Move – your personal travel guide to deliver door to door service </li>
+        <li>Smart Move – your personal travel guide to deliver door to door service</li>
         <li>Weekender – a personalized annual holiday calendar for frequent flyers</li>
         <li>POInt – a Point Of Interest guide to get the best out of a city tour</li> 
         <img src="./ideas.png">
       </ul>
       
       <h3> Hackathons: </h3>
+      <ul> 
+        <li> <a href="https://youtu.be/xQTkXvEJulg"> tNooz hackathon - Proactive Interface for Lufthansa </a> (2015) </li>
+      </ul>
     </nav>
     
   </body>
