--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <nav>
         <ul>
           <li> <a href="http://1-dot-klmvrtest.appspot.com"> Experimenting Side By Side VR/3D with ThreeJs </a> (2016) </li>
-          <li> <a href="http://westpacjqt.appspot.com"> Experimenting Side By Side VR/3D with ThreeJs </a> (2015) </li>
           <li> <a href="http://prezi.com/nywg81juy9zd/"> PREZI - VR related interactive presentation </a> (2015) </li>
           <li> <a href="http://1-dot-klmimplementationplan.appspot.com\index_aug2014.html"> Release Calendar - Best seen in a Mobile </a> (2014) </li>          
+          <li> <a href="http://westpacjqt.appspot.com"> jQuery weeklong workshop for Westpac bank associates </a> (2013) </li>
       </ul>
 
       <h3>Created proposals/prototypes of following ideas:</h3>
